# apitestingfwpy

./: LICENSE  Makefile  README.md  TODOs.md  Taskfile.yml  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yaml  pylint.yaml  pytest.yaml
endpoints/: base_endpoint.py  create_object.py  delete_object.py  get_object.py  update_object.py
mock_service/: Dockerfile  main.py
src/: conftest.py
src/endpoints/: base_endpoint.py  create_object.py  delete_object.py  get_object.py  update_object.py
src/tests/: test_objects.py
tests/: test_objects.py
