[project]
name = "apitestingfwpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
]

[tool.pylint.messages_control]
disable = "C0114, R1711"
max-line-length = 120
