[project]
name = "apitestingfwpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pylint>=3.3.4",
    "pytest>=9.0.3",
]

[tool.pylint.messages_control]
disable = "C0114, R1711, W0621"
max-line-length = 120
